@@ -4,13 +4,13 @@ import agh.ics.oop.*;
 import agh.ics.oop.Statistics.AnimalStatistics;
 import agh.ics.oop.Statistics.SimulationCharts;
 import agh.ics.oop.Statistics.SimulationStatistics;
+import agh.ics.oop.model.Boundary;
 import agh.ics.oop.model.Vector2d;
 import agh.ics.oop.model.mapElements.Animal;
 import agh.ics.oop.model.maps.AbstractWorldMap;
 import agh.ics.oop.model.maps.TheEarthWithOwlBear;
 import agh.ics.oop.model.maps.WorldMap;
 import agh.ics.oop.model.util.MapChangeListener;
-import agh.ics.oop.model.Boundary;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
@@ -21,14 +21,16 @@ import javafx.scene.layout.GridPane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
-import javafx.scene.paint.Paint;
-import javafx.scene.shape.Rectangle;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.paint.Paint;
+import javafx.scene.shape.Rectangle;
+
 import java.io.FileWriter;
 import java.io.PrintWriter;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
@@ -43,8 +45,8 @@ public class SimulationPresenter implements MapChangeListener {
     private SimulationCharts simulationCharts;
     private static final Color CELL_COLOR = Color.rgb(42, 211, 38);
     private Image grassImage, animalImage, doubleAnimalImage, multiAnimalImage, owlBearImage;
+    private List<AnimalEnergyChart> animalEnergyCharts = new ArrayList<>();
 
-    // Nazwy pól muszą odpowiadać identyfikatorom w simulation.fxml
     @FXML private TextField mostCommonGenotypesField, livingAnimalsField, totalPlantsField, freeFieldsField,
             averageEnergyField, averageLifeSpanField, averageChildrenCountField;
     @FXML private TextField genomeField, activePartField, energyField, eatenPlantsField, childrenCountField, ageField, deathDayField;
@@ -54,7 +56,7 @@ public class SimulationPresenter implements MapChangeListener {
     @FXML private Label owlBearKillsLabel;
     @FXML private VBox chartContainer;
 
-    /// inicjalizacja oraz konfiguracja ///
+
     @FXML
     public void initialize() {
         startStopButton.setText("Start");
@@ -144,30 +146,12 @@ public class SimulationPresenter implements MapChangeListener {
         for (int y = bounds.lowerLeft().getY(); y <= bounds.upperRight().getY(); y++) {
             for (int x = bounds.lowerLeft().getX(); x <= bounds.upperRight().getX(); x++) {
                 Vector2d pos = new Vector2d(x, y);
-                Node cell = createVisualElement(pos, gridSize);
-                mapGrid.add(cell, x - bounds.lowerLeft().getX(), bounds.upperRight().getY() - y);
+                Node cell = createMapElement(pos, gridSize);
+                if (cell != null) {
+                    mapGrid.add(cell, x - bounds.lowerLeft().getX(), y - bounds.lowerLeft().getY());
+                }
             }
         }
-    }
-
-    private Node createVisualElement(Vector2d pos, int size) {
-        StackPane container = new StackPane();
-        container.setMinSize(size, size);
-        container.setMaxSize(size, size);
-
-        Rectangle cell = new Rectangle(size, size);
-        cell.setFill(CELL_COLOR);
-        container.getChildren().add(cell);
-
-        if (map instanceof TheEarthWithOwlBear && ((TheEarthWithOwlBear) map).isOwlBearAtPosition(pos)) {
-            container.getChildren().add(createOwlBearElement(size));
-        } else if (map.isAnimalAtPosition(pos)) {
-            container.getChildren().add(createAnimalElement(pos, size));
-        } else if (map.isGrassOnPosition(pos)) {
-            container.getChildren().add(createGrassElement(size));
-        }
-
-        return container;
     }
 
     private Node createOwlBearElement(int size) {
@@ -177,11 +161,39 @@ public class SimulationPresenter implements MapChangeListener {
         return owlBearView;
     }
 
+    private Node createMapElement(Vector2d pos, int size) {
+        StackPane cellContainer = new StackPane();
+        cellContainer.setPrefSize(size, size);
+
+        // Dodaj kolor tła (zobacz punkt 2)
+        Rectangle background = new Rectangle(size, size);
+        background.setFill(CELL_COLOR);
+        cellContainer.getChildren().add(background);
+
+        // Sprawdź, czy na danej pozycji jest trawa
+        if (map.isGrassOnPosition(pos)) {
+            cellContainer.getChildren().add(createGrassElement(size));
+        }
+//Z WYKRESY
+        // Sprawdź, czy na danej pozycji jest OwlBear
+        if (map instanceof TheEarthWithOwlBear theEarthWithOwlBear && theEarthWithOwlBear.isOwlBearAtPosition(pos)) {
+            cellContainer.getChildren().add(createOwlBearElement(size));
+        }
+
+        // Sprawdź, czy na danej pozycji są zwierzęta
+        List<Animal> animals = map.getAnimalsAtPos(pos);
+        if (animals != null && !animals.isEmpty()) {
+            cellContainer.getChildren().add(createAnimalElement(pos, size));
+        }
+
+        return cellContainer;
+    }
 
     private Node createAnimalElement(Vector2d pos, int size) {
         StackPane animalContainer = new StackPane();
-
         List<Animal> animals = map.getAnimalsAtPos(pos);
+
+        // Wybierz odpowiedni obrazek w zależności od liczby zwierząt
         ImageView animalView = new ImageView(
                 animals.size() == 1 ? animalImage :
                         animals.size() == 2 ? doubleAnimalImage :
@@ -191,7 +203,7 @@ public class SimulationPresenter implements MapChangeListener {
         animalView.setFitHeight(size * 0.8);
 
         // Pasek energii
-        Animal firstAnimal = animals.getFirst();
+        Animal firstAnimal = animals.get(0); // Załóżmy, że lista nie jest pusta
         Rectangle energyBar = new Rectangle(size * 0.8, size * 0.1);
         energyBar.setFill((Color) setEnergyBarColor(firstAnimal.getEnergy()));
         StackPane.setAlignment(energyBar, javafx.geometry.Pos.BOTTOM_CENTER);
@@ -209,8 +221,8 @@ public class SimulationPresenter implements MapChangeListener {
         return grassView;
     }
 
-    /// Obsługa statystyk ///
 
+    /// Obsługa statystyk ///
     @Override
     public void mapChanged(WorldMap updatedMap) {
         Platform.runLater(() -> {
@@ -219,6 +231,11 @@ public class SimulationPresenter implements MapChangeListener {
             updateSelectedAnimalStats();
             updateDayCounter();
             simulationCharts.updateChart(currentDay, map);
+
+            for (AnimalEnergyChart chart : animalEnergyCharts) {
+                chart.updateChart(currentDay);
+            }
+
             updateOwlBearStats();
             currentDay++;
         });
@@ -258,7 +275,20 @@ public class SimulationPresenter implements MapChangeListener {
     private void showAnimalStats(Animal animal) {
         if (!showAnimalStats) {
             selectedAnimalStats = new AnimalStatistics(animal, simulation);
-            fillAnimalStats(selectedAnimalStats);
+            //Z WYKRESY
+            // Wypełnij pola tekstowe statystykami zwierzęcia
+            genomeField.setText(selectedAnimalStats.getGenome().toString());
+            activePartField.setText(String.valueOf(selectedAnimalStats.getActivePart()));
+            energyField.setText(String.valueOf(selectedAnimalStats.getEnergy()));
+            eatenPlantsField.setText(String.valueOf(selectedAnimalStats.getEatenPlants()));
+            childrenCountField.setText(String.valueOf(selectedAnimalStats.getChildrenCount()));
+            ageField.setText(String.valueOf(selectedAnimalStats.getAge()));
+            deathDayField.setText(selectedAnimalStats.getDeathDay() != null ? String.valueOf(selectedAnimalStats.getDeathDay()) : "");
+
+            // Dodaj wykres energii dla zwierzęcia
+            if (!animalEnergyCharts.stream().anyMatch(chart -> chart.getAnimal() == animal)) {
+                animalEnergyCharts.add(new AnimalEnergyChart(animal, currentDay, this));
+            }
         } else {
             selectedAnimalStats = null;
         }
@@ -271,8 +301,8 @@ public class SimulationPresenter implements MapChangeListener {
         }
     }
 
-    /// funkcje pomocnicze ///
 
+    /// funkcje pomocnicze ///
     private void loadImages() {
         try {
             grassImage = new Image(Objects.requireNonNull(getClass().getResource("/images/grass-icon.png")).toExternalForm());
